--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,7 @@ $white: #ffffff;
 $font-jost: 'Jost', sans-serif;
 $font-cormorant: 'Cormorant', serif;
 
-$r_minmob: 320px;
+$r_minmob: 330px;
 $r_mob_360: 360px;
 $r_mob_400: 400px;
 $r_mob_500: 500px;
@@ -293,7 +293,7 @@ body {
             margin-top: 3.3rem;
         }
         @media (max-width: $r_mob_360) {
-            margin-top: 4rem;
+            margin-top: 6rem;
         }
     }
     &__flex {
@@ -611,6 +611,8 @@ body {
         }
         @media (max-width: $r_mob_360) {
             font-size: 1.5rem;
+            max-width: 257px;
+            margin: 0 auto;
         }
     }
 }
@@ -703,7 +705,7 @@ body {
             height: 600px;
         }
         @media (max-width: $r_mob_500) {
-            height: 307px;
+            height: 305px;
         }
         &_white {
             height: 520px;
@@ -714,7 +716,7 @@ body {
             padding: 3rem 3.9rem;
             transition: .3s;
             @media (max-width: $r_desk_hd) {
-                height: 400px;
+                height: 500px;
             }
             @media (max-width: $r_mob_500) {
                 height: 240px;
@@ -852,7 +854,7 @@ body {
             color: rgba($green, .7);
             margin-top: 2.5rem;
             margin-bottom: 0;
-            min-height: 55px;
+            max-height: 55px;
             max-width: 31rem;
             line-height: 1.5;
             @media (max-width: $r_desk_hd) {
@@ -862,9 +864,7 @@ body {
             }
             @media (max-width: $r_mob_500) {
                 margin-top: 8px;
-                min-height: 38px;
-            }
-            @media (max-width: $r_mob_360) {
+                max-height: 38px;
                 font-size: 1.5rem;
             }
         }
@@ -1150,7 +1150,7 @@ body {
         padding-bottom: 4rem;
     }
     @media (max-width: $r_mob_360) {
-        padding-top: 9rem;
+        padding-top: 6rem;
         padding-bottom: 6.5rem;
     }
 
@@ -1184,7 +1184,7 @@ body {
         cursor: pointer;
         @media (max-width: $r_mob_360) {
             font-size: 1.25rem;
-            margin-top: 4.5rem;
+            margin-top: 5rem;
         }
         &:hover {
             opacity: 1;
@@ -1213,6 +1213,7 @@ body {
     gap: 2rem;
     @media (max-width: $r_desk_hd) {
         flex-wrap: wrap;
+        justify-content: space-around;
     }
     @media (max-width: $r_tab) {
         justify-content: center;
@@ -1272,7 +1273,7 @@ body {
             box-shadow: none;
         }
         @media (max-width: $r_mob_500) {
-            font-size: 1.6rem;
+            font-size: 1.4rem;
             flex-basis: 140px;
         }
         @media (max-width: $r_mob_360) {
@@ -1312,6 +1313,7 @@ body {
         }
         @media (max-width: 400px) {
             padding: 1rem 0.7rem 2rem;
+
         }
         
        &:hover {
@@ -1344,6 +1346,10 @@ body {
         width: 100%;
         max-width: 351px;
         object-fit: contain;
+        @media (max-width: $r_mob_360) {
+            width: 80%;
+            height: 80%;
+        } 
     }
     &__title {
         font-family: $font-cormorant;
@@ -1364,15 +1370,18 @@ body {
         color: rgba($green, .7);
         margin-top: 1.8rem;
         margin-bottom: 0;
-        min-height: 61px;
+        max-height: 61px;
         max-width: 300px;
         line-height: 1.5;
         @media (max-width: $r_tab) {
             font-size: 1.3rem;
         }
         @media (max-width: $r_mob_500) {
-            min-height: 37px;
+            max-height: 37px;
         }
+        @media (max-width: $r_mob_360) {
+            font-size: 1.1rem;
+        } 
     }
     &__price {
         font-size: 2.4rem;
@@ -1399,7 +1408,7 @@ body {
     
     padding-bottom: 6rem;
     @media (max-width: $r_mob_360) {
-        padding-top: 1rem;
+        padding-top: 2rem;
         padding-bottom: 0;
     }
     &__box {
@@ -1517,6 +1526,9 @@ body {
         padding-top: 4rem;
         padding-bottom: 8rem;
     }
+    @media (max-width: $r_mob_360) {
+        padding-top: 5rem;
+    }
     &-box {
         display: flex;
         align-items: center;
@@ -1578,9 +1590,9 @@ body {
             @media (max-width: $r_mob_360) {
                 margin-top: 2rem;
                 font-size: 1.5rem;
+                margin-bottom: 1rem;
             }
             @media (max-width: 330px) {
-                flex-direction: column;
                 align-items: center;
             }
         }
@@ -1590,7 +1602,7 @@ body {
                 font-size: 1.6rem;
             }
             @media (max-width: $r_mob_360) {
-                margin-bottom: 2.5rem;
+                margin-bottom: 1rem;
             }         
         }
         &__link {
@@ -1660,7 +1672,7 @@ body {
     }
     @media (max-width: $r_mob_360) {
         border-width: 1px;
-        padding: 2.5rem 1.8rem 3.8rem;
+        padding: 2rem 1.8rem 4.5rem;
     }
     &__title {
         font-size: 3rem;
@@ -1668,6 +1680,7 @@ body {
         margin-top: 0;
         @media (max-width: $r_mob_360) {
             margin-bottom: 2.8rem;
+            font-size: 2.7rem;
         }
     }
     &__label {
@@ -1693,6 +1706,10 @@ body {
         @media (max-width: $r_mob_360) {
             padding: 1.8rem 2rem;
             margin-bottom: 1.8rem;
+            font-size: 1.3rem;
+        }
+        @media (max-width: $r_minmob) {
+            font-size: 1.3rem;
         }
         &:focus {
             border: 1px solid rgba($green, 1);
@@ -1746,8 +1763,8 @@ footer {
     @media (max-width: $r_tab) {
         display: block;
         flex-basis: auto;
-        width: 13rem;
-        height: 3.8rem;
+        width: 15rem;
+        height: 4rem;
         margin: 0 auto 3rem;
     }
 }
@@ -1850,7 +1867,11 @@ footer {
         @media (max-width: $r_mob_500) {
             max-width: 210px;
             margin: 5rem auto 0;
-        }        
+            gap: 3.5rem;
+        }
+        @media (max-width: $r_mob_360) {
+            gap: 3.5rem;
+        }    
         &__link {
             display: block;
             width: 4.6rem;
